# embedded-compositor

./: .gitignore  .qmake.conf  CMakeLists.txt  README.md  compositor.pro  embedded-compositor.pro  main.cpp  main.qml  run.sh
.github/workflows/: main.yml
alt-switcher/: GridSwitcher.qml  alt-switcher.pro
compositor/: SurfaceArea.qml  compositor.pro  dbus-selector.h  dbusinterface.cpp  dbusinterface.h  embeddedshellextension.cpp  embeddedshellextension.h  main.cpp  main.qml  notificationmodel.cpp  notificationmodel.h  qml.qrc  sortfilterproxymodel.cpp  sortfilterproxymodel.h
compositor/qml/: GlobalOverlay.qml  RootTransformer.qml  main.qml
compositor/qml/DefaultTaskSwitcher/: TaskSwitcher.qml
compositor/qml/Notifications/: Notification.qml  Notifications.qml
dbus/: com.embeddedcompositor.globaloverlay.xml  com.embeddedcompositor.screen.xml  com.embeddedcompositor.taskswitcher.xml  de.EmbeddedCompositor.globaloverlay.xml  de.EmbeddedCompositor.screen.xml  de.EmbeddedCompositor.screenshot.xml  de.EmbeddedCompositor.taskswitcher.xml  org.freedesktop.Notifications.xml
dev-tools/: CMakeLists.txt  dev-tools.pro  run.sh
dev-tools/example-components/: AltBootScreen.qml  GridSwitcher.qml  example-components.pro
dev-tools/systemd/: embedded-compositor.service  env-clients  env-compositor  systemd.pro
dev-tools/testclients/: CMakeLists.txt  common.pri
dev-tools/testclients/bottomclient/: CMakeLists.txt  bottomclient.pro  dbusclient.cpp  dbusclient.h  main.cpp  main.qml
dev-tools/testclients/leftclient/: CMakeLists.txt
dev-tools/testclients/quickcenterclient/: CMakeLists.txt  main.cpp  main.qml
dev-tools/testclients/rightclient/: CMakeLists.txt
dev-tools/testclients/topclient/: CMakeLists.txt  main.qml
dev-tools/testclients/widgetcenterclient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  widgetcenterclient.pro
embedded-compositor/: CMakeLists.txt  ScreenShotDBusInterface.cpp  ScreenShotDBusInterface.hpp  ScreenShotInterface.cpp  ScreenShotInterface.hpp  configurationhive.cpp  configurationhive.h  dbus-selector.h  dbusinterface.cpp  dbusinterface.h  embedded-compositor.pro  embeddedshellextension.cpp  embeddedshellextension.h  main.cpp  main.qml  notificationmodel.cpp  notificationmodel.h  qml.qrc  sortfilterproxymodel.cpp  sortfilterproxymodel.h
embedded-compositor/dbus/: CompositorScreenDBusInterface.cpp  CompositorScreenDBusInterface.hpp  DBusInterface.cpp  DBusInterface.hpp  GlobalOverlayDBusInterface.cpp  GlobalOverlayDBusInterface.hpp  NotificationModel.cpp  NotificationModel.hpp  ScreenShotDBusInterface.cpp  ScreenShotDBusInterface.hpp  TaskSwitcherDBusInterface.cpp  TaskSwitcherDBusInterface.hpp  TaskSwitcherEntry.hpp  dbus-interfaces.pri
embedded-compositor/qml/: Keyboard.qml  RootTransformer.qml  ScreenSaverController.qml  main.qml
embedded-compositor/qml/DefaultGlobalOverlay/: GlobalOverlay.qml
embedded-compositor/qml/DefaultScreenSaver/: ScreenSaver.qml
embedded-compositor/qml/DefaultTaskSwitcher/: TaskSwitcher.qml
embedded-compositor/qml/Notifications/: Notification.qml  Notifications.qml
embeddedplatform/: CMakeLists.txt  embeddedcompositordbusclient.cpp  embeddedcompositordbusclient.h  embeddedplatform.cpp  embeddedplatform.h  embeddedplatform.pri  embeddedplatform.pro  embeddedshell.cpp  embeddedshell.h  embeddedshellanchor.h  embeddedshellsurface.cpp  embeddedshellsurface.h  embeddedshellsurface_p.h  embeddedshellsurfaceview.cpp  embeddedshellsurfaceview.h  embeddedshellsurfaceview_p.h  embeddedshelltypes.h
embeddedshellwindow/: embeddedshellwindow.cpp  embeddedshellwindow.h  embeddedshellwindow.pro
protocol/: embedded-shell.xml
quickembeddedshellwindow/: CMakeLists.txt  qmldir  quickembeddedshell.cpp  quickembeddedshell.h  quickembeddedshellsurface.cpp  quickembeddedshellsurface.h  quickembeddedshelltypes.h  quickembeddedshellview.cpp  quickembeddedshellview.h  quickembeddedshellwindow.cpp  quickembeddedshellwindow.h  quickembeddedshellwindow.pro  quickembeddedshellwindow_global.h  waylandinputregion.cpp  waylandinputregion.h
shell/: embeddedshellintegration.cpp  embeddedshellintegration.h  embeddedshellsurface.cpp  embeddedshellsurface.h  shell.pro
shellintegration/: CMakeLists.txt  embedded-shell.json  embeddedshellintegration.cpp  embeddedshellintegration.h  embeddedshellsurface.cpp  embeddedshellsurface.h  main.cpp  shellintegration.pro
systemd/: compositor.service  env-clients  env-compositor
testclients/: common.pri  testclients.pro
testclients/bottomclient/: bottomclient.pro  dbusclient.cpp  dbusclient.h  main.cpp  main.qml
testclients/leftclient/: leftclient.pro  main.cpp  main.qml
testclients/quickcenterclient/: main.cpp  main.qml
testclients/rightclient/: main.cpp  main.qml  rightclient.pro
testclients/topclient/: main.qml
testclients/widgetcenterclient/: main.cpp  mainwindow.cpp  mainwindow.h  widgetcenterclient.pro
